# haskell-snippets

./: README.md  snippets.cabal
src/: GenericTraverse.hs  Loeb.hs  PartialSOP.hs
