name:                snippets
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/haskell-snippets#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , generics-sop
                     , lens
                     , mtl
  exposed-modules:     GenericTraverse
                       Loeb
                       PartialSOP
  ghc-options:         -Wall